# TimeBase

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  LICENSE  README.md  TimeBase.sln  TimeBase.slnx
.github/workflows/: build-core.yml  build-providers.yml  build-sdk.yml  build-supervisor.yml  e2e-tests.yml
.husky/: README.md  pre-commit
docker/: docker-compose.yml
docker/core/: Dockerfile
docker/supervisor/: Dockerfile
docs/: AGREEMENTS.md  ARCHITECTURE.md  CI-CD.md  OBSERVABILITY.md  ROADMAP.md  TESTING-LOCAL.md
docs/api/: rest-api.md
providers/ccxt/: Dockerfile  config.yaml  requirements.txt  test_provider.py
providers/ccxt/src/: main.py
providers/examples/minimal-provider/: Dockerfile  config.yaml  requirements.txt
providers/yahoo-finance/: .dockerignore  Dockerfile  README.md  config.yaml  requirements.txt  test_provider.py
providers/yahoo-finance/src/: main.py
src/: .dockerignore  .editorconfig  Directory.Build.props  Directory.Packages.props  TimeBase.slnx
src/TimeBase.Contracts/: TimeBase.Contracts.csproj
src/TimeBase.Contracts/Protos/: provider.proto
src/TimeBase.Core/: Endpoints.cs  Program.cs  TimeBase.Core.csproj  appsettings.json
src/TimeBase.Core.Infrastructure/: DependencyExtensions.cs  TimeBase.Core.Infrastructure.csproj
src/TimeBase.Core.Infrastructure/Data/: TimeBaseDbContext.cs  TimeBaseDbContextFactory.cs
src/TimeBase.Core.Infrastructure/Entities/: Provider.cs  Symbol.cs  TimeSeriesData.cs
src/TimeBase.Core.Infrastructure/Migrations/: 20260123092957_InitialCreate.Designer.cs  20260123092957_InitialCreate.cs  20260125132718_RemovePayloadColumn.Designer.cs  20260125132718_RemovePayloadColumn.cs  20260125134216_AddTimeSeriesDataCompositeKey.Designer.cs  20260125134216_AddTimeSeriesDataCompositeKey.cs  20260125161042_AddProviderGrpcAndCapabilities.Designer.cs  20260125161042_AddProviderGrpcAndCapabilities.cs  TimeBaseDbContextModelSnapshot.cs
src/TimeBase.Core.Tests.Integration/: TimeBase.Core.Tests.Integration.csproj
src/TimeBase.Core.Tests.Integration/Endpoints/: DataEndpointsTests.cs  GlobalExceptionHandlerTests.cs  (+2 more)
src/TimeBase.Core.Tests.Unit/: TimeBase.Core.Tests.Unit.csproj
src/TimeBase.Plugins.Contracts/: TimeBase.Plugins.Contracts.csproj
src/TimeBase.ProviderSdk/: README.md  generate_protos.py  pyproject.toml  requirements.txt  setup.py
src/TimeBase.ProviderSdk/timebase_sdk/: __init__.py  config_loader.py  grpc_server.py  models.py  provider_base.py
src/TimeBase.ProviderSdk/timebase_sdk/protos/: __init__.py  provider.proto
src/TimeBase.Supervisor/: Endpoints.cs  Program.cs  TimeBase.Supervisor.csproj  appsettings.Development.json
src/docker/: docker-compose.dev.yml  docker-compose.yml
(+85 files in other folders)
